add:divisiones y estilos

--- a/index.html
+++ b/index.html
@@ -6,83 +6,54 @@
 	<meta name="keywords" content="palabras claves para búsqueda. literatura, libros. libros infantiles">
 	<meta name="autor" content="Cecy">
 	<title>Mi primer sitio web</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div id="header">
-		<div>LOGO</div>
-		<nav>
+	<header>
+		<div id="logo">
+			<img src="images/logo.png" alt="">
+		</div>
+		<div class="menu">
 			<ul>
-				<li><a href="section.html">HOME</a></li>
-				<li><a href="section.html">MISIÓN</a></li>
-				<li><a href="section.html">VISIÓN</a></li>
-				<li><a href="section.html">CONTACTO</a></li>
+				<li>HOME</li>
+				<li>BOTÓN 2</li>
+				<li>BOTÓN 3</li>
+				<li>BOTÓN 4</li>
 			</ul>
-		</nav>
-		<div>
-			Aquí va la búsqueda
 		</div>
-	</div>
-	<hr>
+	</header>
 	<div>
-		<div class="botones">
-			ZONA DE TÍTULO
+		<div id="hero">
+			<img src="images/gatitos.jpg" alt="">
 		</div>
 		<div>
-			HERO IMAGE
-		</div>
-		<div>
-			CONTENIDO
+			Contenedor
+			<h1>MIAU</h1>
+			<div>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
+			</div>
+			<div class="contenedor-cajas">
+					<div class="caja">
+					<img src="images/gatitos 2.jpg" alt="">
+					<h2>HOLA</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
+				</div>
+				<div class="caja">
+					<img src="images/gatitos 2.jpg" alt="">
+					<h2>HOLA</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
+				</div>
+				<div class="caja">
+					<img src="images/gatitos 2.jpg" alt="">
+					<h2>HOLA</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
+				</div>
+			</div>
 		</div>
 	</div>
-	<hr>
-	<div>
-		<div>
-			MAPA DE SITIO
-		</div>
-		<div>
-			REDES SOCIALES
-		</div>
+	<div class="footer-class">
+		<p>
+			SOY UN FOOTER
+		</p>
 	</div>
-	<h1>¡¡HOLA!!</h1>
-	<h2>HOLA</h2>
-	<h3>HOLA</h3>
-	<h4>HOLA</h4>
-	<h5>HOLA</h5>
-	<h6>HOLA</h6>
-	Holi de nuevo n..n* <br> 
-	Hawaii <br><br>
-	HOLIWI
-	<h1>TÌTULO</h1>
-	<p style="font-family: courier; font-size: 60px; color:peru">Soy un párrafo feliz hbudhivhfihvfibhikhcjdnuvdfhvjhdjhvjbdvfdfdsdfgfkjfhgfjhgcvhgvhjhdjhjdfhjdfyfghgfsgfdhgfhgjfgyg EL TÍTULO NO SE PONE DENTRO DEL PÁRRAFO, ASÍ COMO ESTÁ AQUÍ fgdfhfhghgdtfebhcbhvgfgfhvfdgvhsbjnnsakmdwpklodklfjkiihfudhgfjhbvhfbvdhvbhfbjdn</p>
-	<p>Soy un párrafo feliz hbudhivhfihvfibhikhcjdnuvdfhvjhdjhvjbdvfdfdsdfgfkjfhgfjhgcvhgvhjhdjhjdfhjdfyfghgfsgfdhgfhgjfgygfgfygfygfghfghgfhghfgghfghfgdfhfhghgdtfebhcbhvgfgfhvfdgvhsbjnnsakmdwpklodklfjkiihfudhgfjhbvhfbvdhvbhfbjdn</p>
-	<p>Soy un párrafo feliz hbudhivhfihvfibhikhcjdnuvdfhvjhdjhvjbdvfdfdsdfgfkjfhgfjhgcvhgvhjhdjhjdfhjdfyfghgfsgfdhgfhgjfgygfgfygfygfghfghgfhghfgghfghfgdfhfhghgdtfebhcbhvgfgfhvfdgvhsbjnnsakmdwpklodklfjkiihfudhgfjhbvhfbvdhvbhfbjdn</p>
-	<hr>
-	<hr>
-	Esta es solo una frase no necesito un etiqueda de pàrrafo<br>
-	<pre>
-		El pre es para poner el texto tal cual
-		     lo estoy poniendo
-		pero el código se ve todo rarito
-	</pre>
-	<p style="color:peru;">Quiero que este párrafo sea color peru xd</p>
-	<ol>
-		<li>SOMOS UNA LISTA DESORDENADA</li>
-		<li>SOMOS UNA LISTA DESORDENADA</li>
-		<li>SOMOS UNA LISTA DESORDENADA</li>
-		<li>SOMOS UNA LISTA DESORDENADA</li>
-	</ol>
-	<ul>
-		<li>SOMOS UNA LISTA ORDENADA</li>
-		<li>SOMOS UNA LISTA ORDENADA</li>
-		<li>SOMOS UNA LISTA ORDENADA</li>
-		<li>SOMOS UNA LISTA ORDENADA</li>
-	</ul>
-	<p>Hay un <i>gatito</i> muy <strong>LINDO</strong> en la <small>ventana</small></p>
-	<em>SOY CECY</em><br>
-	Texto <sub>2</sub><br>
-	Texto <sup>6</sup>
-</body>
-</html>
-Contact GitHub API Training Shop Blog About
-© 2016 GitHub, Inc. Terms Privacy Security Status Help
+			
